Fixed input rounded edges on mobile

--- a/public/styles/home_desktop.css
+++ b/public/styles/home_desktop.css
@@ -133,7 +133,7 @@ button {
 form {
   margin: auto;
   width: 50%;
-
+  -webkit-appearance: none;
 }
 
 form select {
